--- a/main.html
+++ b/main.html
@@ -140,13 +140,13 @@
 
         <div class="portfolio-item">
             <h3>Przykład 1</h3>
-            <img src="emmi.jpg" alt="Project 1">
+            <img src="cat.jpg" alt="Project 1">
             <p>Opis 1.</p>
         </div>
 
         <div class="portfolio-item">
             <h3>Przykład 2</h3>
-            <img src="emmi.jpg" alt="Project 2">
+            <img src="cat.jpg" alt="Project 2">
             <p>Opis 2.</p>
         </div>
 
